--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-50 xsmall-50 small-50 medium-33 large-33 xlarge-33 meditera-fitur-item" data-item="record">
+                    <div class="col-50 xsmall-50 small-50 medium-33 large-33 xlarge-33 meditera-fitur-item-record" data-item="record">
                       <div class="card">
                         <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
                         <div class="card-content card-content-padding">
