--- a/index.html
+++ b/index.html
@@ -339,8 +339,9 @@
   <div style="background:#fff;display: flex;flex-direction:column;margin: auto;align-items: center;justify-content: center;padding:20px 20px;">
     <img src="logo.jpg" style="width:200px;height:300px;object-fit: contain;background-image:none;">
     <p style="font-size:16px;font-weight:bold;text-align:center;width:300px;margin-top:15px;margin-bottom:2px;">Meditera</p>
+    <p><a href="#" class="meditera-install display-none" target="_blank">Install</a><a href="#" class="meditera-bukaapp display-none" target="_blank">Buka</a></p>
   </div>
-  <div><p><a href="#" class="meditera-install display-none" target="_blank">Install meditera App</a><a href="#" class="meditera-bukaapp display-none" target="_blank">Buka meditera App</a></p></div>
+  <div><p>Meditera</p></div>
 </div>
 <!--end overlay------------------------------------------------------------------------------->
 
