--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <i class="icon f7-icons">bars</i>
               </a>
             </div>
-            <div class="title">Beranda</div>
+            <div class="title">Meditera</div>
             <div class="right">
               <a class="link popover-open" data-popover=".profile-popover">
                 <span class="margin-right-half"></span>
@@ -214,7 +214,7 @@
             <div class="title-large">
               <div class="title-large-text display-flex align-items-center">
                 <i class="icon f7-icons margin-right-half" style="font-size: 24px">square_grid_2x2_fill</i>
-                <span>Beranda</span>
+                <span>Meditera</span>
               </div>
             </div>
           </div>
@@ -284,7 +284,7 @@
         <div class="page-content hide-toolbar-on-scroll">
               
               <div class="row margin-bottom meditera-fitur">      
-                    <div class="col-50 xsmall-50 small-50 medium-33 large-33 xlarge-33 meditera-fitur-item" data-item="kalibrasi">
+                    <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item" data-item="kalibrasi">
                       <div class="card">
                         <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
                         <div class="card-content card-content-padding">
@@ -295,7 +295,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-50 xsmall-50 small-50 medium-33 large-33 xlarge-33 meditera-fitur-item" data-item="status">
+                    <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item" data-item="status">
                       <div class="card">
                         <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
                         <div class="card-content card-content-padding">
@@ -306,7 +306,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-50 xsmall-50 small-50 medium-33 large-33 xlarge-33 meditera-fitur-item" data-item="kondisi">
+                    <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item" data-item="kondisi">
                       <div class="card">
                         <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
                         <div class="card-content card-content-padding">
@@ -317,7 +317,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-50 xsmall-50 small-50 medium-33 large-33 xlarge-33 meditera-fitur-item-record" data-item="record">
+                    <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item-record" data-item="record">
                       <div class="card">
                         <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
                         <div class="card-content card-content-padding">
