--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               </ul>
             </div>
 
-            <div class="list no-hairlines no-hairlines-between margin-bottom">
+            <div class="list no-hairlines no-hairlines-between margin-bottom display-none">
               <ul>
                 <li>
                   <a href="#" class="item-link item-content my-logout">
@@ -286,7 +286,7 @@
               <div class="row margin-bottom meditera-fitur">      
                     <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item" data-item="kalibrasi">
                       <div class="card">
-                        <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
+                        <div class="card-header no-padding" style="overflow:hidden;"><img src="icon1.png" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;background-image:none;"></div>
                         <div class="card-content card-content-padding">
                           <div style="font-weight:bold;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">KALIBRASI</div>
                           <div></div>
@@ -297,7 +297,7 @@
                     </div>
                     <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item" data-item="status">
                       <div class="card">
-                        <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
+                        <div class="card-header no-padding" style="overflow:hidden;"><img src="icon2.png" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;background-image:none;"></div>
                         <div class="card-content card-content-padding">
                           <div style="font-weight:bold;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">STATUS</div>
                           <div></div>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item" data-item="kondisi">
                       <div class="card">
-                        <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
+                        <div class="card-header no-padding" style="overflow:hidden;"><img src="icon3.png" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;background-image:none;"></div>
                         <div class="card-content card-content-padding">
                           <div style="font-weight:bold;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">KONDISI</div>
                           <div></div>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="col-50 xsmall-50 small-50 medium-33 large-25 xlarge-25 meditera-fitur-item-record" data-item="record">
                       <div class="card">
-                        <div class="card-header no-padding" style="overflow:hidden;"><img src="logo.jpg" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;"></div>
+                        <div class="card-header no-padding" style="overflow:hidden;"><img src="icon4.png" style="width:100%;aspect-ratio: 1 / 1;object-fit:cover;background-image:none;"></div>
                         <div class="card-content card-content-padding">
                           <div style="font-weight:bold;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">RECORD</div>
                           <div></div>
