--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="web-app-origin-association" href="/.well-known/web-app-origin-association">
   <link rel="stylesheet" href="https://unpkg.com/framework7@7.1.2/framework7-bundle.min.css" integrity="sha512-qwJ4PsxVWATskfnOo8ucBpegGIQylOYfMjS0VjcvilbteuS+jfHYtfRUP1w5N0CAtzx4It4dhuagchNQIi8aHQ==" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/framework7-icons@5.0.5/css/framework7-icons.css" integrity="sha512-O/PPS1pSMECR87GU69PHkhG99cSyEK39K2F0kiXBGGcVb+EGejnbS8+1iGDufzbsEf3Ehe1yY3+XXET85QM8bA==" crossorigin="anonymous">
-
+  <link rel="shortcut icon" type="image/png" href="icon512.png">
   
   <!--------------------------Style-------------------------------------->
   <style>
@@ -334,14 +334,23 @@
       </div>     
 
           
-<!--start overlay------------------------------------------------------------------------------->          
+<!--start overlay------------------------------------------------------------------------------->
+<div id="overlay-password" style="background: rgba(0, 0, 0, 0.8);position: fixed;z-index: 1000;align-items: center;justify-content: center;display: flex;flex-direction:column;bottom: 0;left: 0;right: 0;top: 0;    background-image: url();background-size: cover;background-position: center top;">
+  <div style="background:#fff;display: flex;flex-direction:column;margin: auto;align-items: center;justify-content: center;padding:20px 20px;">
+    <p style="font-size:16px;font-weight:bold;text-align:center;width:300px;margin-top:15px;margin-bottom:2px;">Password</p>
+	<div style="border:1px solid #000;padding:5px 5px;"><input type="password" id="password"></div>
+	<button class="button" id="submitpassword">Login</button>
+  </div>
+</div>
+
+          
 <div id="overlay-welcome" style="background: rgba(0, 0, 0, 0.8);position: fixed;z-index: 10000;align-items: center;justify-content: center;display: flex;flex-direction:column;bottom: 0;left: 0;right: 0;top: 0;    background-image: url();background-size: cover;background-position: center top;">
   <div style="background:#fff;display: flex;flex-direction:column;margin: auto;align-items: center;justify-content: center;padding:20px 20px;">
     <img src="logo.jpg" style="width:200px;height:300px;object-fit: contain;background-image:none;">
     <p style="font-size:16px;font-weight:bold;text-align:center;width:300px;margin-top:15px;margin-bottom:2px;">Meditera</p>
     <p><a href="#" class="meditera-install display-none" target="_blank">Install</a><a href="#" class="meditera-bukaapp display-none" target="_blank">Buka</a></p>
   </div>
-  <div><p>Meditera</p></div>
+  <div><p>Supported browser : chrome</p></div>
 </div>
 <!--end overlay------------------------------------------------------------------------------->
 
